Segunda preentrega backend

--- a/src/views/partials/card.handlebars
+++ b/src/views/partials/card.handlebars
@@ -9,6 +9,7 @@
   <h3>{{title}}</h3>
   <p>Category: {{category}} </p>
   <p>Price: ${{price}}</p>
-  <p>Description: {{description}} </p>
-  <p>ID: {{id}} </p>
+   <p>Description: {{description}} </p>
+  <a href="/product/{{_id}}"><button>Detail</button></a>
+  <button id="addCart" name="{{_id}}">Add to cart</button>
 </div>
