--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -6,6 +6,15 @@
   
   }
   
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  button {
+    cursor: pointer;
+  }
+  
   h1 {
     text-align: center;
     color: rgb(34, 34, 134);
@@ -66,4 +75,162 @@
   .form div input {
     width: 100%;
   }
+  .navBar {
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+    list-style: none;
+    margin: 1rem;
+  }
   
+  .navBar li a {
+    font-size: 2rem;
+  }
+  
+  .messages {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    width: 80%;
+    height: 50vh;
+    margin: auto;
+    padding: 3rem;
+    overflow-y: auto;
+  }
+  
+  .inputMessage {
+    text-align: right;
+    width: 80%;
+    margin: 2rem auto;
+  }
+  
+  .inputMessage input {
+    width: 100%;
+    padding: 0.5rem;
+  }
+  
+  .categories,
+  .sort {
+    width: 60%;
+    margin: 1.5rem auto;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .categories a {
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    padding: 0.5rem 1rem;
+  }
+  
+  .sort {
+    margin: 2.5rem auto;
+    justify-content: center;
+    gap: 1rem;
+  }
+  
+  .sort a {
+    border-bottom: 1px solid;
+    padding: 0 0.5rem;
+  }
+  
+  .pagination {
+    margin: 2rem auto;
+    display: flex;
+    justify-content: space-around;
+    width: 20%;
+    align-items: center;
+  }
+  
+  .numberPage {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  
+  .numberPage button {
+    min-width: 2rem;
+    text-align: center;
+    padding: 0.4rem;
+  }
+  
+  .numberPage .currentPage {
+    font-size: 1.5rem;
+    padding: 0.4rem 0.8rem;
+  }
+  
+  .pagination .disabled {
+    color: grey;
+  }
+  
+  .limit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .limit div a {
+    border-bottom: 1px solid;
+    padding: 0 0.5rem;
+    margin: 0.5rem;
+  }
+  .limit div {
+    margin: 0.5rem 0;
+  }
+  
+  .cartId, .cartProductsTitle {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  
+  .cartProducts {
+    width: 70%;
+    margin: 0 auto;
+  }
+  
+  .titleDetail { 
+    font-size: 3rem;
+  }
+  
+  .cardCart {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    justify-content: space-between;
+  }
+  
+  .cardCart h3 {
+    width: 25rem;
+  }
+  
+  .cardCart p, .cardCart img{
+    width: 8rem;
+  }
+  
+  #total {
+    text-align: center;
+  }
+  
+  .product {
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%);
+  }
+  
+  .productDetail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .detail {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+  
+  .detail button {
+    width: 100%;
+  }
