--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,7 +1,16 @@
-<h1>PRODUCTS</h1>
+{{> navBar}}
+
+<h1>Products</h1>
+
+{{> categories}}
 
 <div class="products">
-  {{#each products}}
+  {{#each payload}}
   {{> card}}
   {{/each}}
 </div>
+
+{{> pagination}}
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="js/products.js"></script>
