--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,5 +1,13 @@
-<h2>MY PROFILE</h2>
-<p>Welcome!, {{user.first_name}} - {{user.last_name}} </p>
-<p>Email: {{user.email}} </p>
-<p>Age: {{user.age}} </p>
-<a href="/api/sessions/logout">Finish Session</a>
+{{> navBar}}
+
+<h1>PROFILE</h1>
+
+<div class="userProfile">
+  <h2>Welcome {{user.name}}</h2>
+  <p>Email: {{user.email}}</p>
+  {{#if user.age}}
+  <p>Age: {{user.age}}</p>
+  {{/if}}
+  <p>Role: {{user.role}}</p>
+  <a href="/user/logout"><button>Logout</button></a>
+</div>
