--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,6 +1,6 @@
 {{> navBar}}
 
-<h1>Cart</h1>
+<h1>CART</h1>
 <h3 class="cartId">ID: {{cid}}</h3>
 
 <h2 class="cartProductsTitle">Products</h2>
@@ -13,4 +13,5 @@
 
 <h4 id="total"></h4>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="js/cart.js"></script>
