--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,11 +1,14 @@
-<h2>START SESSION </h2>
+<h1>LOGIN</h1>
 
-<form action="/api/sessions/login" method="POST">
-    <label for="email">Email: </label>
-    <input type="email" name="email" required>
-    <br><br>
-    <label for="password">Password: </label>
-    <input type="text" name="password" required>
-    <br><br>
-    <button type="submit"> Enviar </button>
+<form action="/api/user/login" method="POST" class="loginForm">
+  <label for="email">Email: </label>
+  <input type="email" name="email" id="email">
+
+  <label for="passwor">Password: </label>
+  <input type="password" name="password" id="password">
+
+  <button type="submit">Login</button>
+  
+  <p>or</p>
+  <a href="/user/register">Register</a>
 </form>
