--- a/src/views/partials/cardCart.handlebars
+++ b/src/views/partials/cardCart.handlebars
@@ -1,4 +1,4 @@
-<div class="cardCart">
+<div class="cardCart" id={{product._id}}>
   {{!-- {{#if product.thumbnail.length}}
       <img src={{product.thumbnail[0]}} alt={{title}}>
   {{else}} --}}
@@ -6,6 +6,8 @@
   {{!-- {{/if}} --}}
   <h3>{{product.title}}</h3>
   <p>Price: $<span class="price">{{product.price}}</span></p>
-  <p>Quantity: <span class="quantity">{{quantity}}</span></p>
+  {{!-- <p>Quantity: <span class="quantity">{{quantity}}</span></p> --}}
+  <p>Quantity: <input type="number" class="quantity" value={{quantity}} name={{_id}}></p>
   <p>Subtotal: $<span class="subTotal"></span></p>
+  <button class="delete">Delete</button>
 </div>
