Desafío 6 - Login con hasheo de password

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -276,3 +276,17 @@
   .userProfile {
     text-align: center;
   }
+  
+.failed {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  margin: 0 auto;
+  gap: 1.5rem;
+}
+
+.failed p {
+  font-size: 2rem;
+}
