--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -8,6 +8,5 @@
   {{#if user.age}}
   <p>Age: {{user.age}}</p>
   {{/if}}
-  <p>Role: {{user.role}}</p>
-  <a href="/user/logout"><button>Logout</button></a>
+  <a href="/api/user/logout"><button>Logout</button></a>
 </div>
