--- a/src/views/partials/navBar.handlebars
+++ b/src/views/partials/navBar.handlebars
@@ -1,6 +1,8 @@
 <ul class="navBar">
-  <li><a href="/products">Home</a></li>
+  <li><a href="/">Home</a></li>
   <li><a href="/realTimeProducts">Real Time Products</a></li>
   <li><a href="/chat">Chat</a></li>
-  <li><a href="/cart/65ff33826a6a680e86458716">Cart</a></li>
+  <li><a href="/cart/{{user.cartId}}">Cart</a></li>
 </ul>
+
+{{> user}}
