--- a/src/views/partials/login.handlebars
+++ b/src/views/partials/login.handlebars
@@ -8,6 +8,7 @@
   <input type="password" name="password" id="password">
 
   <button type="submit">Login</button>
+  <a href="/user/requestpasswordreset">Reset password</a>
   
   <p>or</p>
   <a href="/user/register">Register</a>
