--- a/src/views/partials/realTimeProducts.handlebars
+++ b/src/views/partials/realTimeProducts.handlebars
@@ -4,13 +4,13 @@
 
 <div class="forms">
   {{> formNewProduct}}
-  {{> formDeleteProduct}}
+  {{!-- {{> formDeleteProduct}} --}}
 </div>
 
 <div id="realTimeProducts" class="products">
-  {{#each products}}
+  {{!-- {{#each products}}
   {{> card}}
-  {{/each}}
+  {{/each}} --}}
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
