--- a/src/views/partials/register.handlebars
+++ b/src/views/partials/register.handlebars
@@ -16,6 +16,12 @@
   <label for="age">Age:</label>
   <input type="number" name="age" id="age">
 
+  <label for="role">Role:</label>
+  <select name="role" id="role">
+    <option value="user">Regular user</option>
+    <option value="premium">Premium user</option>
+  </select>
+
   <button type="submit">Register</button>
 
   <p>or</p>
