--- a/src/views/partials/checkout.handlebars
+++ b/src/views/partials/checkout.handlebars
@@ -1,6 +1,6 @@
 {{> navBar}}
 
-<h1>Checkout</h1>
+<h1>CHECKOUT</h1>
 <div class="checkout">
     <p>Nombre: {{purchaseData.clientName}}</p>
     <p>Email: {{purchaseData.email}}</p>
