--- a/src/views/partials/profile.handlebars
+++ b/src/views/partials/profile.handlebars
@@ -21,6 +21,7 @@
       <button>Change to Premium User</button>
     </form>
   {{/if}}
+  <a href="/user/update-documents"><button>Update Documents</button></a>
   <a href="/user/requestpasswordreset"><button>Reset password</button></a>
   <a href="/api/user/logout"><button>Logout</button></a>
 </div>
