--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -3,8 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  
   }
+
+  body {
+    background: linear-gradient(to right, #a7c4fa, #9898e4);
+}
   
   a {
     text-decoration: none;
@@ -22,7 +25,7 @@
   }
   
   .card {
-    box-shadow: 0 0 1rem rgb(187, 185, 185);
+    box-shadow: 0 0 1rem rgb(82, 80, 80);
     width: 17rem; 
     display: flex;
     flex-direction: column;
@@ -37,7 +40,7 @@
     height: 1.5rem;
     font-size: 1rem;
     font-weight: 400;
-    color: white;
+    color: rgb(255, 255, 255);
     background-color:  rgb(48, 156, 228);
   }
   
@@ -160,7 +163,7 @@
   }
   
   .pagination .disabled {
-    color: grey;
+    color: rgb(63, 63, 63);
   }
   
   .limit {
@@ -254,7 +257,7 @@
     margin: 10rem auto;
     gap: 0.3rem;
     padding: 3rem;
-    box-shadow: 0 0 1rem rgb(212, 212, 212);
+    box-shadow: 0 0 1rem rgb(119, 119, 119);
   }
   
   .loginForm a, .loginForm p, .registerForm a, .registerForm p {
@@ -303,4 +306,50 @@
 
 .userProfile button {
   width: 100%;
+}
+
+.preview {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0 3rem;
+  margin-bottom: 3rem;
+}
+
+.preview div, .preview div img, .preview div embed{
+  height: 100%;
+  width: 15rem;
+}
+
+.preview div embed {
+  height: 15rem;
+}
+
+.preview div img {
+  object-fit: contain;
+}
+
+.displayBlock {
+  display: inline-block;
+}
+
+.preview div p {
+  margin-bottom: 1rem;
+}
+
+.userToDelete {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.userToDelete .card {
+  width: 60%;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.userToDelete .card div{
+  display: flex;
+  gap: 1rem;
 }
