--- a/src/views/confirmationsend.handlebars
+++ b/src/views/confirmationsend.handlebars
@@ -1,4 +1,4 @@
 {{> navBar}}
 
-<h1>Confirmation Send</h1>
+<h1>CONFIRMATION SENT</h1>
 <p style="text-align: center;">Reset email sent successfully</p>
