--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -4,13 +4,13 @@
   <h1 class="titleDetail">{{productDetail.title}}</h1>
   <div class="productDetail">
     <img
-      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLhZ20NCp7B8aXMv9r7CVxomuhhoPVyT3AcJceeVqmoASVe4m8U6d-mgd0YJWQqfbdfOU&usqp=CAU"
+      src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.fVw9JodzxGszcW51PEDnoAAAAA%26pid%3DApi&f=1&ipt=728f1607c998e79909475d842d8f820e0fccfb7473a337951a49e845a158e7bf&ipo=images"
       alt="no image available">
     <div class="detail">
       <p>Description: {{productDetail.description}} </p>
       <p>Category: {{productDetail.category}}</p>
       <p>Price: ${{productDetail.price}}</p>
-      <button id="addCart" name="{{productDetail._id}}">Add to cart</button>
+      <button class="addCart">Add to cart</button>
     </div>
   </div>
 </div>
