--- a/src/views/resetpassword.handlebars
+++ b/src/views/resetpassword.handlebars
@@ -1,6 +1,6 @@
 {{> navBar}}
 
-<h1>Reset Password</h1>
+<h1>RESET PASSWORD</h1>
 <form action="/api/user/resetpassword/" method="POST" class="formResetPassword">
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
